# intzip

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README.md  autoreconf.sh  clean.sh  compare.sh  configure-debug.sh  configure.ac  files  gentests.pl  numenc.pl  rlebuf.cpp  rlebuf.pl  uint.cpp  unicode.sh
include/: clang.h  def.h  gcc.h  intzip-bitbuffer.h  intzip-bitnumber.h  intzip-bits.h  intzip-bitstore.h  intzip-bitvector.h  intzip-chunk.h  intzip-def.h  intzip-io.h  intzip-options.h  intzip-rlebuf.h  intzip-stdint.h  intzip-trace.h  intzip-uint.h  intzip.h  io.h  options.h
lib/: Makefile.am  intzip.cpp  trace.cpp
src/: Makefile.am  io.cpp  main.cpp
testdata/: equidistant_alternating  equidistant_alternating.hex  equidistant_any_16bit.u16.bin.iz  equidistant_any_16bit_except_some.u16.bin.iz  equidistant_distance_1  equidistant_distance_100.hex  equidistant_distance_2.hex  equidistant_distance_255  equidistant_distance_3  equidistant_distance_4096  equidistant_distance_5  equidistant_distance_65536  equidistant_distance_7  equidistant_many_small.hex  equidistant_multiple  equidistant_multiple.hex  io_0x0_0x1_0x2_0x100.hex  io_0x0_0x1_0x2_0xffff.hex  io_0x0_0x1_0x2_0xffffffff.hex  io_0x0_0x1_0x2_0xffffffffffffffff.hex  random_small_numbers  random_uniform_distribution  short_0_0xFFFE_0xFFFF  short_0_0xFFFF  short_0_1_2_4_8_0x10  short_0x0_0xffffffff.hex  short_0x0_0xffffffffffffffff.hex  short_0x1_0x2_0x17.hex  short_0x1_0x2_0xffff.hex  short_0x1_0x2_0xffffffff.hex  short_0x1_0x2_0xffffffffffffffff.hex  short_0xFFF0_0xFFFF  short_0xFFFE_0xFFFF_0x10000_0x10001  short_0xFFFFFFFE_0xFFFFFFFF  short_0xFFFF_0x10000_0x10001  short_0xFFFF_0xFFFFFFFF  short_0xa_0x64_0x3e8_0x2710.hex  short_0xff_0x100_0x101_0x102  short_0xfffe_0xffff_0x10000  short_0xffff_0xfffffffe_0xffffffff  (+12 more)
tests/: Makefile.am  atlocal.in  empty.at  encode-decode.in  equidistant.at  gentests.am  gentests.at  intzip.in  io.at  macros.at  package.m4.am  random.at  short.at  singleton.at  special.at  testdata.am  testsuite.at
